--- a/Addressbook.Web/packages.config
+++ b/Addressbook.Web/packages.config
@@ -4,5 +4,9 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Owin" version="4.2.0" targetFramework="net48" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.0" targetFramework="net48" />
+  <package id="Microsoft.Owin.Host.SystemWeb.es" version="4.2.0" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
+  <package id="Owin" version="1.0" targetFramework="net48" />
 </packages>
