--- a/Addressbook.Web/packages.config
+++ b/Addressbook.Web/packages.config
@@ -12,5 +12,6 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.0" targetFramework="net48" />
   <package id="Microsoft.Owin.Host.SystemWeb.es" version="4.2.0" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
 </packages>
