--- a/Addressbook.Web/packages.config
+++ b/Addressbook.Web/packages.config
@@ -13,6 +13,8 @@
   <package id="Microsoft.Owin" version="4.2.0" targetFramework="net48" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.0" targetFramework="net48" />
   <package id="Microsoft.Owin.Host.SystemWeb.es" version="4.2.0" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net48" />
