--- a/Addressbook.Web/Views/web.config
+++ b/Addressbook.Web/Views/web.config
@@ -17,8 +17,10 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="Addressbook.Web" />
+		  <add namespace="Addressbook.Web.Models"/>
 		<add namespace="System.Web.Optimization"></add>
-      </namespaces>
+		
+	  </namespaces>
     </pages>
   </system.web.webPages.razor>
 
