--- a/Addressbook.Web/Web.config
+++ b/Addressbook.Web/Web.config
@@ -14,7 +14,13 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  <system.web>
+
+	<connectionStrings>
+		<add name="DataContext" connectionString="Data Source=(local);Initial Catalog=db_AddressBook;Integrated Security=True;User ID=sa;Password=123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
+
+
+	<system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
     <authentication mode="None" />
