feat: V011 002 enable-migrations 02

--- a/Addressbook.Infrastructure/Addressbook.Infrastructure.csproj
+++ b/Addressbook.Infrastructure/Addressbook.Infrastructure.csproj
@@ -52,12 +52,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
-    <Compile Include="DataAccess\DataCoontext.cs" />
+    <Compile Include="DataAccess\DataContext.cs" />
     <Compile Include="DataAccess\Entities\Permission.cs" />
     <Compile Include="DataAccess\Entities\Role.cs" />
     <Compile Include="DataAccess\Entities\RolePermission.cs" />
     <Compile Include="DataAccess\Entities\User.cs" />
     <Compile Include="DataAccess\Entities\UserRole.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
