--- a/Addressbook.Web/Web.config
+++ b/Addressbook.Web/Web.config
@@ -15,10 +15,13 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
 
-	<connectionStrings>
+	<!--<connectionStrings>
 		<add name="DataContext" connectionString="Data Source=(local);Initial Catalog=db_AddressBook;Integrated Security=True;User ID=sa;Password=123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
-	</connectionStrings>
+	</connectionStrings>-->
 
+	<connectionStrings>
+		<add name="DataContext" connectionString="Data Source=localhost;Initial Catalog=db_AddressBook;persist security info=True;User ID=sa;Password=123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
 
 	<system.web>
     <compilation debug="true" targetFramework="4.8" />
