--- a/Addressbook.Web/packages.config
+++ b/Addressbook.Web/packages.config
@@ -20,6 +20,7 @@
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net48" />
+  <package id="Ninject" version="3.3.6" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="WebGrease" version="1.5.2" targetFramework="net48" />
 </packages>
