--- a/Addressbook.Tests/packages.config
+++ b/Addressbook.Tests/packages.config
@@ -5,6 +5,7 @@
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net48" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net48" />
   <package id="Ninject" version="3.3.6" targetFramework="net48" />
+  <package id="Operation" version="1.1.2" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
 </packages>
