--- a/Addressbook.Web/packages.config
+++ b/Addressbook.Web/packages.config
@@ -22,6 +22,7 @@
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net48" />
   <package id="Ninject" version="3.3.6" targetFramework="net48" />
   <package id="Ninject.Web.Common" version="3.3.2" targetFramework="net48" />
+  <package id="Operation" version="1.1.2" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="WebGrease" version="1.5.2" targetFramework="net48" />
 </packages>
